lang/test/testdata/errors/missing_required_field.scampi
module main

import "std"

std.copy { dest = "/tmp/foo" }
